--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -22,8 +22,9 @@
       }
 
       @case ("admin") {
-        <app-admin-datas [admin_data]="user_moderator"></app-admin-datas>
-        <app-admin-form  
+        <app-admin-datas [admin_data]="user_moderator" class="w-[40%] outline-1"></app-admin-datas>
+        <app-admin-form 
+        class="w-[40%] outline-1" 
         (error)="handleMsg($event)"
         (valid_admin_form)="modifyAdmin($event)"
         ></app-admin-form>
