--- a/frontend/src/app/pages/profile/work-list/work-list.component.html
+++ b/frontend/src/app/pages/profile/work-list/work-list.component.html
@@ -37,6 +37,7 @@
     <div class="col-span-4 flex justify-end align-middle">
       <button
         class="bg-dark_red-500 text-white-500 font-medium text-xl rounded-xl cursor-pointer p-5 pl-20 pr-20"
+        (click)="open_applicants(work.id)"
       >
         Info
       </button>
