--- a/frontend/src/app/pages/profile/applicants-dialog/applicants-dialog.component.html
+++ b/frontend/src/app/pages/profile/applicants-dialog/applicants-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="fixed inset-0 bg-dark_blue-500/80 bg-opacity-50 z-[1000] ">
-  <div class="absolute p-10 bg-white-500 top-[50%] left-[50%] -translate-[50%] z-100 opacity-100 rounded-2xl h-[70wh] overflow-y-scroll">
+  <div class="absolute p-10 bg-white-500 top-[50%] left-[50%] -translate-[50%] z-100 opacity-100 rounded-2xl h-2/3 w-1/2 overflow-y-scroll">
     <button class="absolute top-3 right-3 text-dark_blue-500 hover:text-dark_red-500 hover:cursor-pointer"
     (click)="close()">
       <mat-icon>close</mat-icon>
@@ -10,7 +10,7 @@
       <div class="grid grid-cols-2 gap-4">
         
       @for (jelentkezo of jelentkezok; track $index) {
-        <div class="text-base border-2 border-dark_blue-500 rounded-2xl p-4 flex flex-col gap-4">
+        <div class="text-base border-2 border-dark_blue-500 rounded-2xl p-4 flex flex-col gap-4 h-[50%] overflow-y-scroll">
           <div class="flex flex-col">
             <h1 class="text-dark_blue-500 font-medium">
               Email cím: <span class="text-dark_red-500">{{ jelentkezo.data.email }}</span>
