--- a/frontend/src/app/pages/work-details/work-details.component.html
+++ b/frontend/src/app/pages/work-details/work-details.component.html
@@ -20,18 +20,14 @@
   <h2 class="text-dark_blue-500 font-medium text-3xl">
     <!-- TODO -->
     {{
-      work.getWork()?.terulet_id === 5
-        ? "Szeged"
-        : work.getWork()?.terulet_id === 3
-        ? "Budapest"
-        : "Ismeretlen"
+      work.getWork()?.terulet_id | lutLocations | async
     }}
     <!-- ! -->
   </h2>
   <h2 class="text-dark_blue-500 font-medium text-3xl">
     <!-- TODO -->
     {{
-      work.getWork()?.ceg_adoazonosito  
+      work.getWork()?.ceg_adoazonosito | lutCompanyName | async
     }}
     <!-- ! -->
   </h2>
