--- a/frontend/src/app/pages/work-details/work-details.component.html
+++ b/frontend/src/app/pages/work-details/work-details.component.html
@@ -56,4 +56,13 @@
   </button>
 
   </div>
+
+  <app-error-msg
+    [error_msg]="error_msg"
+    [appDisplay]="showError"
+  ></app-error-msg>
+  <app-success-msg
+    [success_msg]="success_msg"
+    [appDisplay]="showSuccess"
+  ></app-success-msg>
 </div>
