--- a/frontend/src/app/pages/publish/publish.component.html
+++ b/frontend/src/app/pages/publish/publish.component.html
@@ -1,7 +1,7 @@
 <app-add-city-dialog [appDisplay]="showAddCity" (show)="showAddCity = $event"></app-add-city-dialog>
 
 <div
-  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32"
+  class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center gap-8 justify-center p-56 pt-32"
 >
 
   <div class="bg-white-500 p-4 rounded-2xl flex flex-col w-[80%]">
