Publish kulcs szo hozzaado panel check

--- a/frontend/src/app/pages/profile/work-list/work-list.component.html
+++ b/frontend/src/app/pages/profile/work-list/work-list.component.html
@@ -16,10 +16,10 @@
     />
     <div class="col-span-11 flex flex-col">
       <div class="">
-        <h1 class="font-medium text-3xl text-dark_blue-500">
+        <h1 class="font-medium text-3xl text-dark_blue-500 flex items-center gap-2">
           {{ work.cim }}
           <span
-            class="font-medium outline-2 outline-dark_blue-500 p-1.5 text-xs rounded-2xl"
+            class="font-medium outline-2 outline-dark_blue-500 p-1.5 pt-0.5 pb-0.5 text-xs rounded-2xl "
             >{{ work.kulcsszo_neve }}</span
           ><!--TODO Szét kell szedni-->
         </h1>
