--- a/frontend/src/app/pages/admin/main-page/main-page.component.html
+++ b/frontend/src/app/pages/admin/main-page/main-page.component.html
@@ -1,7 +1,7 @@
 <div
-  class="bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center justify-center p-56 pt-32 gap-10"
+  class="bg-white-500 dark:bg-dark_blue-500 grid grid-cols-4 justify-center p-56 pt-32 gap-10"
 >
-  <div class="bg-white-500 rounded-2xl p-4 w-[70%] flex flex-col gap-4">
+  <div class="bg-white-500 rounded-2xl p-4 flex flex-col gap-4 col-span-4">
     <h1 class="mr-auto ml-auto text-center text-4xl text-dark_blue-500 mb-10">
       Elfogadásra váró hírdetések.
     </h1>
@@ -53,16 +53,21 @@
         </div>
       </div>
     </div>
-
     } }
   </div>
+
+  <app-add-admin-form class="col-span-2"></app-add-admin-form>
+
+  <app-delete-user-form class="col-span-2"></app-delete-user-form>
 
   <app-error-msg
     [appDisplay]="show_error"
     [error_msg]="error_msg"
+    class="col-span-2 col-start-2 w-fit justify-self-center"
   ></app-error-msg>
   <app-success-msg
     [appDisplay]="show_success"
     [success_msg]="success_msg"
+    class="col-span-2 col-start-2 w-fit justify-self-center"
   ></app-success-msg>
 </div>
