--- a/frontend/src/app/pages/admin/main-page/main-page.component.html
+++ b/frontend/src/app/pages/admin/main-page/main-page.component.html
@@ -56,7 +56,7 @@
     } }
   </div>
 
-  <app-add-admin-form class="col-span-2"></app-add-admin-form>
+  <app-add-admin-form class="col-span-2" (msg)="msgHandler($event)"></app-add-admin-form>
 
   <app-delete-user-form class="col-span-2"></app-delete-user-form>
 
