making Ceg reg data required and company data modifiable

--- a/frontend/src/app/pages/register/ceg-form/ceg-form.component.html
+++ b/frontend/src/app/pages/register/ceg-form/ceg-form.component.html
@@ -10,6 +10,7 @@
       class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
       minlength="2"
       formControlName="adoazonosito"
+      required
     />
     <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
       pin
@@ -41,6 +42,7 @@
     class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
     minlength="2"
     formControlName="email"
+    required
   />
   <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
     alternate_email
@@ -58,6 +60,7 @@
     class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
     minlength="6"
     formControlName="jelszo1"
+    required
   />
   <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
     lock
@@ -72,6 +75,7 @@
     class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-dark_blue-500 w-full"
     minlength="6"
     formControlName="jelszo2"
+    required
   />
   <mat-icon class="absolute left-1 top-[0.625lh] transform -translate-y-1/2">
     lock
