--- a/frontend/src/app/pages/publish/publish.component.html
+++ b/frontend/src/app/pages/publish/publish.component.html
@@ -1,4 +1,4 @@
-<app-add-city-dialog [appDisplay]="showAddCity" (show)="showAddCity = $event"></app-add-city-dialog>
+<app-add-city-dialog [appDisplay]="showAddCity" (show)="showAddCity = $event" (load)="load()"></app-add-city-dialog>
 
 <div
   class="bg-white-50 bg-white-500 dark:bg-dark_blue-500 flex flex-col items-center gap-8 justify-center p-56 pt-32"
