--- a/frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="flex justify-between pl-56 pr-56 h-18 items-center bg-white-500 dark:bg-dark_blue-500 w-full sticky top-0"
+  class="flex justify-between pl-56 pr-56 h-18 items-center bg-white-500 dark:bg-dark_blue-500 w-full sticky top-0 z-10"
 >
   <a
     href="/hero"
