--- a/frontend/src/app/pages/publish/key-word-form/key-word-form.component.html
+++ b/frontend/src/app/pages/publish/key-word-form/key-word-form.component.html
@@ -1,23 +1,27 @@
-<fieldset class="text-dark_blue-500 flex items-end">
-  <input
-    type="text"
-    [formControl]="key_word_form"
-    class="w-full text-dark_blue-500 p-1 relative border-b-2 group invalid:border-dark_red-500 invalid:text-dark_red-500 flex items-end outline-0"
-    placeholder="Kulcs szó"
-    #key_word
-  />
-  <div
-    class="text-dark_blue-500 hover:text-dark_red-500 flex flex-col items-center justify-end h-full"
-  >
-    <mat-icon class="hover:cursor-pointer" (click)="add(key_word.value)"
-      >add</mat-icon
-    >
+<div class="fixed inset-0 bg-dark_blue-500/80 bg-opacity-50 z-[1000] ">
+  <div class="absolute p-10 bg-white-500 top-[50%] left-[50%] -translate-[50%] z-100 opacity-100 rounded-2xl">
+    <button class="absolute top-3 right-3 text-dark_blue-500 hover:text-dark_red-500 hover:cursor-pointer"
+    (click)="close()">
+      <mat-icon>close</mat-icon>
+    </button>
+    <h1 class="text-center text-dark_blue-500 font-medium text-2xl pb-4">Kulcsszó Hozzáadás</h1>
+
+      <fieldset class="col-span-2 p-1 border-b-dark_blue-500 border-b-2">
+        <input type="text" [formControl]="keyword"
+        min="2"
+        placeholder="Kulcsszó"
+        class="text-dark_blue-500 font-medium focus:outline-0">
+      </fieldset>
+      <br>
+      <input type="submit" (click)="addkeyword()" value="Hozzáad" class="col-span-2 focus:outline-0 hover:cursor-pointer w-fit ml-auto mr-auto bg-dark_red-500 text-white-500 p-2 pl-6 pr-8 font-medium text-xl rounded-xl">
   </div>
-</fieldset>
-<div class="flex gap-2 p-4 pl-0 pr-0">
-  @for (key_word of key_words; track $index) {
-  <span
-    class="font-medium outline-2 outline-dark_blue-500 p-1.5 pb-0.5 pt-0.5 text-xs rounded-2xl hover:bg-dark_blue-500 hover:text-white-500 hover:cursor-pointer"
-    (click)="delete($index)">{{ key_word }}</span>
-  }
+
+  <app-error-msg
+    [error_msg]="error_msg"
+    [appDisplay]="showError"
+  ></app-error-msg>
+  <app-success-msg
+    [success_msg]="success_msg"
+    [appDisplay]="showSuccess"
+  ></app-success-msg>
 </div>
