kulcszo_allaslehetoseg_kapcsolat tablaba hozzaadas

--- a/frontend/src/app/pages/publish/publish.component.html
+++ b/frontend/src/app/pages/publish/publish.component.html
@@ -61,7 +61,7 @@
       </fieldset>
 
       <fieldset class="flex gap-4 items-center col-start-2">
-        <select matNativeControl formControlName="kategoria" class="inline-block w-full px-4 py-2 text-sm text-dark_blue-500 border-2 border-dark_blue-500 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-dark_red-500 focus:border-dark_red-500 outline-dark_blue-500 focus:outline-0">
+        <select matNativeControl formControlName="kulcsszo" class="inline-block w-full px-4 py-2 text-sm text-dark_blue-500 border-2 border-dark_blue-500 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-dark_red-500 focus:border-dark_red-500 outline-dark_blue-500 focus:outline-0">
           <option value="" disabled selected hidden>Kulcsszó</option>
           @for(keyword of keywords; track keyword){
             <option value="{{keyword.NEVE}}">{{keyword.NEVE}}</option>
