--- a/frontend/src/app/pages/search/search-form/search-form.component.html
+++ b/frontend/src/app/pages/search/search-form/search-form.component.html
@@ -4,6 +4,23 @@
   >
   <input
   type="text"
+  placeholder="Kategória"
+  class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-white-500 w-full"
+  minlength="2"
+  formControlName="form_category"
+  />
+  <!-- formControlName="form_keyword_company" -->
+  
+    <mat-icon class="absolute left-1 top-[1lh] transform -translate-y-1/2">
+      work
+    </mat-icon>
+  </fieldset>
+  
+  <fieldset
+    class="w-full text-white-500 p-1 relative border-b-2 group invalid:border-dark_red-500 invalid:text-dark_red-500 flex items-end"
+  >
+  <input
+  type="text"
   placeholder="Kulcsszó"
   class="h-[1lh] outline-none pl-8 text-medium focus:outline-0 peer text-white-500 w-full"
   minlength="2"
