--- a/frontend/src/app/pages/admin/main-page/main-page.component.html
+++ b/frontend/src/app/pages/admin/main-page/main-page.component.html
@@ -20,12 +20,13 @@
       />
       <div class="col-span-11 flex flex-col">
         <div class="">
-          <h1 class="font-medium text-3xl text-dark_blue-500">
+          <h1 class="font-medium text-3xl text-dark_blue-500 flex items-center gap-2">
             {{ work.cim }}
-            <span
-              class="font-medium outline-2 outline-dark_blue-500 p-1.5 text-xs rounded-2xl"
-              >{{ work.kulcsszo_neve }}</span
-            ><!--TODO Szét kell szedni-->
+            @for(key_words of work.kulcsszo_neve; track $index){
+              <span
+              class="font-medium outline-2 outline-dark_blue-500 p-1.5 pt-0.5 pb-0.5 text-xs rounded-2xl"
+              >{{ key_words }}</span>
+            }
           </h1>
           <h2 class="text-dark_blue-500 font-medium text-2xl">
             {{ work.terulet_id | lutLocations | async }}
