--- a/frontend/src/app/pages/admin/main-page/main-page.component.html
+++ b/frontend/src/app/pages/admin/main-page/main-page.component.html
@@ -1,6 +1,15 @@
 <div
   class="bg-white-500 dark:bg-dark_blue-500 grid grid-cols-4 justify-center p-56 pt-32 gap-10"
 >
+  <app-add-admin-form
+    class="col-span-2"
+    (msg)="msgHandler($event)"
+  ></app-add-admin-form>
+
+  <app-delete-user-form class="col-span-2"></app-delete-user-form>
+
+  <app-statistics class="col-span-4"></app-statistics>
+  
   <div class="bg-white-500 rounded-2xl p-4 flex flex-col gap-4 col-span-4">
     <h1 class="mr-auto ml-auto text-center text-4xl text-dark_blue-500 mb-10">
       Elfogadásra váró hírdetések.
@@ -20,12 +29,15 @@
       />
       <div class="col-span-11 flex flex-col">
         <div class="">
-          <h1 class="font-medium text-3xl text-dark_blue-500 flex items-center gap-2">
+          <h1
+            class="font-medium text-3xl text-dark_blue-500 flex items-center gap-2"
+          >
             {{ work.cim }}
             @for(key_words of work.kulcsszo_neve; track $index){
-              <span
+            <span
               class="font-medium outline-2 outline-dark_blue-500 p-1.5 pt-0.5 pb-0.5 text-xs rounded-2xl"
-              >{{ key_words }}</span>
+              >{{ key_words }}</span
+            >
             }
           </h1>
           <h2 class="text-dark_blue-500 font-medium text-2xl">
@@ -56,10 +68,6 @@
     </div>
     } }
   </div>
-
-  <app-add-admin-form class="col-span-2" (msg)="msgHandler($event)"></app-add-admin-form>
-
-  <app-delete-user-form class="col-span-2"></app-delete-user-form>
 
   <app-error-msg
     [appDisplay]="show_error"
