top cegek statisztika

--- a/frontend/src/app/pages/admin/main-page/statistics/top-comp/top-comp.component.html
+++ b/frontend/src/app/pages/admin/main-page/statistics/top-comp/top-comp.component.html
@@ -1,4 +1,4 @@
-@if (datas.length > 0){
+@if ( categories.length > 0 && datas.length && this.title.length > 0) {
 <highcharts-chart
   [Highcharts]="Highcharts"
   [options]="chartOptions"
