--- a/frontend/src/app/pages/admin/main-page/statistics/statistics.component.html
+++ b/frontend/src/app/pages/admin/main-page/statistics/statistics.component.html
@@ -4,4 +4,8 @@
 
 <app-megye-count-jobs></app-megye-count-jobs>
 
+<app-megye-avg-fizu></app-megye-avg-fizu>
+
+<app-popular-categories></app-popular-categories>
+
 </div>
